# Finance-planner

./: .gitignore  README.md  render.yaml
.claude/: settings.json  settings.local.json
.claude/skills/finance-report/: SKILL.md
.claude/skills/webapp-builder/: SKILL.md
backend/: pyproject.toml  railway.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/db/: queries.py  supabase_client.py
backend/app/models/: dashboard.py  debt.py  holding.py  market.py  profile.py  transaction.py
backend/app/routers/: alerts.py  auth.py  cas_import.py  dashboard.py  debts.py  excel_import.py  export_data.py  family.py  fire.py  holdings.py  market.py  portfolio.py  profiles.py  transactions.py  watchlist.py
backend/app/scheduler/: jobs.py
backend/app/services/: auth_service.py  fire_calculator.py  net_worth.py
backend/migrations/: 001_initial_schema.sql  002_add_lic_govscheme_asset_types.sql  003_separate_holdings_tables.sql  004_portfolio_import_snapshots.sql  005_alerts_config.sql  006_family_members.sql  007_portfolio_holdings_unified.sql  008_watchlist_price_alerts.sql
backend/tests/: conftest.py  test_fire_calculator.py  test_market_sync.py  test_xirr_calculator.py
frontend/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/offline/: page.tsx
frontend/app/protected/: layout.tsx
frontend/components/charts/: DebtPaydownChart.tsx  (+2 more)
frontend/lib/: api.ts  types.ts  utils.ts
frontend/public/: manifest.json  sw.js
(+50 files in other folders)
