[project]
name = "finance-planner-backend"
version = "0.1.0"
description = "Personal Finance & FIRE Tracker - FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "supabase>=2.9.0",
    "httpx>=0.27.0",
    "pdfplumber>=0.11.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
    "yfinance>=0.2.40",
    "numpy_financial>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["app*", "migrations*"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
